post_save signal attached for SavingType and AccountBalance

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = project.config.settings.testing
-addopts = --reuse-db --nomigrations --cov=. --cov-report=html
+#addopts = --reuse-db --nomigrations --cov=. --cov-report=html
 markers =
 	no_auto_fixture: no auto fixture
