--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ addopts = --reuse-db --nomigrations --cov=. --cov-report=html --full-trace --ver
 #addopts = --nomigrations
 markers =
 	no_auto_fixture: no auto fixture
+	disable_get_user_patch: no create user
