registered custom pytest mark: webtest - for integration tests which are slow

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ addopts = --reuse-db --nomigrations --cov=. --cov-report=html --full-trace --ver
 markers =
 	no_auto_fixture: no auto fixture
 	disable_get_user_patch: no create user
+	webtest: integration tests
