disable_get_journal_patch mark

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,4 +5,5 @@ addopts = --reuse-db --nomigrations --cov=. --cov-report=html --full-trace --ver
 markers =
 	no_auto_fixture: no auto fixture
 	disable_get_user_patch: no create user
+        disable_get_journal_patch: no create journal
 	webtest: integration tests
