Invite sent views

--- a/_config_secrets.json.TEMPLATE
+++ b/_config_secrets.json.TEMPLATE
@@ -1,5 +1,6 @@
 {
   "FILENAME": "_config_settings.json",
   "SECRET_KEY": "ENTER_SECRET_KEY",
+  "SALT": "SLT",
   "DJANGO_SETTINGS_MODULE": "project.config.settings.production"
 }
