Use local settings by default

--- a/_config_secrets.json.TEMPLATE
+++ b/_config_secrets.json.TEMPLATE
@@ -2,5 +2,5 @@
   "FILENAME": "_config_settings.json",
   "SECRET_KEY": "ENTER_SECRET_KEY",
   "SALT": "SLT",
-  "DJANGO_SETTINGS_MODULE": "project.config.settings.production"
+  "DJANGO_SETTINGS_MODULE": "project.config.settings.local"
 }
