--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = project.config.settings.testing
-addopts = --reuse-db --nomigrations --cov=. --cov-report=html --full-trace --verbose
+addopts = --reuse-db --nomigrations --cov=. --cov-report=html --full-trace
 #addopts = --nomigrations
 markers =
 	no_auto_fixture: no auto fixture
