--- a/_config_secrets.env.TEMPLATE
+++ b/_config_secrets.env.TEMPLATE
@@ -1,6 +1,3 @@
-{
-  "FILENAME": "_config_settings.json",
-  "SECRET_KEY": "ENTER_SECRET_KEY",
-  "SALT": "SLT",
-  "DJANGO_SETTINGS_MODULE": "project.config.settings.local"
-}
+SECRET_KEY=django_secrect_key,
+SALT=some_password_for_additional_security,
+DJANGO_SETTINGS_MODULE=project.config.settings.local
