--- a/_config_secrets.env.TEMPLATE
+++ b/_config_secrets.env.TEMPLATE
@@ -1,3 +1,3 @@
-SECRET_KEY=django_secrect_key,
-SALT=some_password_for_additional_security,
+SECRET_KEY=django_secrect_key
+SALT=some_password_for_additional_security
 DJANGO_SETTINGS_MODULE=project.config.settings.local
