paging component with slippers

--- a/project/core/templates/components.yaml
+++ b/project/core/templates/components.yaml
@@ -1,4 +1,4 @@
 components:
     delete_cell: "core/includes/cell_delete.html"
     edit_cell: "core/includes/cell_edit.html"
-
+    paging: "core/includes/paging.html"
